<resources>
    <string name="app_name">BeagleSightWear</string>
    <string name="plusCoarse">+5</string>
    <string name="plusFine">+1</string>
    <string name="minusCoarse">-5</string>
    <string name="minusFine">-1</string>
    <string name="position_">Position:</string>
    <string name="distance_">Distance:</string>
    <string name="default_dist">20</string>
    <string name="open_phone_app_first">Open phone app first and add some bows</string>
</resources>
